feat: :sparkles: create component for edit material
create component for edit materia and create store procedure for comunicate price
